Fixed Logo margin on Mobile devices

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -145,7 +145,7 @@
     &__company-name {
       height: 38px;
       background-size: contain;
-      text-indent: 46px;
+      text-indent: 42px;
     }
 
     &__nav {
